# landcover-seg-unet

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_fr.md  LICENSE  NOTICE  README.md  README_fr.md  branch_diff.txt  environment.yaml  main.py  pyproject.toml  settings.yaml
.github/workflows/: build-wheel-release.yaml
configs/: config.yaml  main.yaml  user.yaml
configs/artifacts/: default.yaml
configs/cache/: default.yaml
configs/curriculum/: control.yaml
configs/datacache/: default.yaml
configs/dataset/: dataprep.yaml  demo.yaml  demo_.yaml
configs/domain/: demo.yaml  demo_domain.yaml
configs/extent/: demo.yaml  demo_extent.yaml
configs/grid/: base.yaml  base_grid.yaml
configs/grid_profile/: base.yaml
configs/models/: multihead.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
docs/: ARCHITECTURE.md  current_folder_structure.md  data_preparation.md  data_preparation_fr.md  group_importance.md  la_combinations.md  multihead_hierarchy_roadmap.md  phases_design.md  project_structure.md  project_structure_fr.md  target_structure.md  workflow_chart.md  workflow_chart_fr.md
docs/ADRs/: ADR-0001-decouple-grid-domain-task.md  ADR-0002-grid-keyed-caching.md  ADR-0003-tile-summaries-and-reporting.md  ADR-0004-unified-task-manifest.md  ADR-0005-deferred-goals-scope-consolidate.md  ADR-0006-project-packaging-entry-point.md  ADR-0007-unified-experiment-io.md  (+44 more)
notebooks/: 01_data_preparation.ipynb  02_model_train.ipynb  03_study_sweep.ipynb
scripts/: generate_dummy_data.py  run.py
src/: _types.py  alias.py
tests/: conftest.py
(+1160 files in other folders)
